--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <div class="container py-5 h-100">
           <div class="row d-flex align-items-center justify-content-center h-100">
             <div class="col-md-8 col-lg-7 col-xl-6">
-              <img src="/signup.png" class="img-fluid" alt="Phone image">
+              <img src="signup.png" class="img-fluid" alt="image">
             </div>
             <div class="col-md-7 col-lg-5 col-xl-5 offset-xl-1">
               <form id="signup-form">
